--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html ng-app="ngBoilerplate" ng-controller="AppCtrl">
   <head>
     <title>ng-boilerplate</title>
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--meta name="description" content="NoiseXPerience - Das interaktive Event!">
+    <meta name="author" content="NoiseXPerience Team"-->
     <!-- your compiles CSS -->
     <link rel="stylesheet" type="text/css" href="assets/nx2client.css"/>
 
